--- a/Index.html
+++ b/Index.html
@@ -28,7 +28,7 @@
 		<a onclick="smoothScrool()" href="#contact">KONTAKT</a>
 		<ul class="navBarRM">
 		<li class="liNav"><a class="language" href="english_index.html">
-				<img class="languageImgM" src="files/img/webImg/icons/640px-Flag_of_Poland.svg.png" alt="lng">
+				<img class="languageImgM" src="files/img/webImg/icons/640px-Flag_of_Poland.svg" alt="lng">
 			</a></li>
 			<li class="liNav"><a onclick="smoothScrool()" class="reserveM" href="#strona-glowna">ZAREZERWUJ APARTAMENT  &#8594;</a></li>
 			
@@ -42,7 +42,7 @@
 	
 	<div class="column navBarLeft" >
 		<div class="logotypeGreen" >
-			<img  src="files/img/webImg/logotyp.svg" alt="" height="50px" width="50px" />
+			<img  src="files/img/webImg/logotyp.svg" alt=""  />
 		</div>
 		<div class="logotypeBeige" >
 			<img  src="files/img/webImg/logotypB.svg" alt="" height="50px" width="50px" />
@@ -63,7 +63,7 @@
 		<ul class="navBarR">
 			<li class="liNav"><a onclick="smoothScrool()" class="reserve" href="#reservingApartment">ZAREZERWUJ APARTAMENT  &#8594;</a></li>
 			<li class="liNav"><a class="language" href="english_index.html">
-				<img class="languageImg" src="files/img/webImg/icons/640px-Flag_of_Poland.svg.png" alt="lng">
+				<img class="languageImg" src="files/img/webImg/icons/640px-Flag_of_Poland.svg" alt="lng">
 			</a></li>
 		</ul>
 	</div>
@@ -96,9 +96,20 @@
 	<h5>ZAREZERWUJ APARTAMENT</h5>
 	<div class="listForReservingOptions">
 		<ul class="reservingOptions">
-			<li><a class="resC dateArrival" href="#">Data przyjazdu <img src="files/img/webImg/icons/baseline-bookmark_border-24px.svg" alt=""> </a></li>
-			<li><a class="resC dateDeparture" href="#">Data wyjazdu <img src="files/img/webImg/icons/baseline-bookmark_border-24px.svg" alt=""></a></li>
-			<li class="special"><a class="resC checkAvailability" href="#">Sprawdź dostępność &#8594;</a></li>
+			<li class="resizeRes"><a class="resC dateArrival" href="#">Data przyjazdu <img src="files/img/webImg/icons/baseline-bookmark_border-24px.svg" alt=""> </a></li>
+			<li class="resizeRes"><a class="resC dateDeparture" href="#">Data wyjazdu <img src="files/img/webImg/icons/baseline-bookmark_border-24px.svg" alt=""></a></li>
+			<li><a class="resC checkAvailability" href="#">Sprawdź dostępność &#8594;</a></li>
+		</ul>
+		</div>
+</div>
+
+<div class="reservingWindowTest" id="reservingApartmentTest">
+	<h5>ZAREZERWUJ APARTAMENT Test</h5>
+	<div class="listForReservingOptionsTest">
+		<ul class="reservingOptionsTest">
+			<li class="resizeResTest"><a class="resCT dateArrivalT" href="#">Data przyjazdu <img src="files/img/webImg/icons/baseline-bookmark_border-24px.svg" alt=""> </a></li>
+			<li class="resizeResTest"><a class="resCT dateDepartureT" href="#">Data wyjazdu <img src="files/img/webImg/icons/baseline-bookmark_border-24px.svg" alt=""></a></li>
+			<li><a class="resCT checkAvailabilityTest" href="#">Sprawdź dostępność &#8594;</a></li>
 		</ul>
 		</div>
 </div>
