--- a/Index.html
+++ b/Index.html
@@ -92,24 +92,15 @@
 
 
 
+
+
 <div class="reservingWindow" id="reservingApartment">
-	<h5>ZAREZERWUJ APARTAMENT</h5>
+	<h5>ZAREZERWUJ APARTAMENT </h5>
 	<div class="listForReservingOptions">
 		<ul class="reservingOptions">
-			<li class="resizeRes"><a class="resC dateArrival" href="#">Data przyjazdu <img src="files/img/webImg/icons/baseline-bookmark_border-24px.svg" alt=""> </a></li>
+			<li class="resizeRes leftRR"><a class="resC dateArrival" href="#">Data przyjazdu <img src="files/img/webImg/icons/baseline-bookmark_border-24px.svg" alt=""> </a></li>
 			<li class="resizeRes"><a class="resC dateDeparture" href="#">Data wyjazdu <img src="files/img/webImg/icons/baseline-bookmark_border-24px.svg" alt=""></a></li>
-			<li><a class="resC checkAvailability" href="#">Sprawdź dostępność &#8594;</a></li>
-		</ul>
-		</div>
-</div>
-
-<div class="reservingWindowTest" id="reservingApartmentTest">
-	<h5>ZAREZERWUJ APARTAMENT Test</h5>
-	<div class="listForReservingOptionsTest">
-		<ul class="reservingOptionsTest">
-			<li class="resizeResTest"><a class="resCT dateArrivalT" href="#">Data przyjazdu <img src="files/img/webImg/icons/baseline-bookmark_border-24px.svg" alt=""> </a></li>
-			<li class="resizeResTest"><a class="resCT dateDepartureT" href="#">Data wyjazdu <img src="files/img/webImg/icons/baseline-bookmark_border-24px.svg" alt=""></a></li>
-			<li><a class="resCT checkAvailabilityTest" href="#">Sprawdź dostępność &#8594;</a></li>
+			<li class="resizeRes rightRR"><a class=" resC checkAvailability" href="#">Sprawdź dostępność &#8594;</a></li>
 		</ul>
 		</div>
 </div>
@@ -119,9 +110,7 @@
 <div id="main">
 	<div class="sectionTwo">
 	
-		<div class= "sTImage"> 
-			<img src="files/img/photos/apartment-ceiling-chairs-1571460.png" alt="">
-		</div>
+
 		
 		<div class = "sTText">
 			<h6>POZNAJMY SIĘ</h6>
@@ -129,6 +118,9 @@
 			<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
 		</div>
 		
+				<div class= "sTImage"> 
+			<img src="files/img/photos/apartment-ceiling-chairs-1571460.png" alt="">
+		</div>
 
 	</div>
 		
