Update on 2nd section

--- a/Index.html
+++ b/Index.html
@@ -127,21 +127,21 @@
 	<div class="sectionThree">
 	<ul class="apartmentFacts">
 		<li>
-			<ul>
-				<li>4 </li>
-				<li>Komfortowych apartamenów</li>
+			<ul class="apartmentFactsSquare">
+				<li class="aFSCircle"><h2>4</h2> </li>
+				<li><h7>Komfortowych apartamenów</h7></li>
 			</ul>	
 		</li> 
 		<li>
-			<ul>
-				<li>10 </li>
-				<li>Minut spacerkiem do motławy</li>
+			<ul class="apartmentFactsSquare">
+				<li class="aFSCircle"><h2>10</h2> </li>
+				<li><h7>Minut spacerkiem <br>do motławy</h7></li>
 			</ul>	
 		</li> 
 		<li>
-			<ul>
-				<li>5/5 </li>
-				<li>Ocena naszych gości</li>
+			<ul class="apartmentFactsSquare">
+				<li class="aFSCircle"><h2>5/5</h2> </li>
+				<li><h7>Ocena naszych <br>gości</h7></li>
 			</ul>	
 		</li> 
 		
