--- a/Index.html
+++ b/Index.html
@@ -87,7 +87,7 @@
 
 <div class="openingScreen">
 	<h4>APARTHOTEL</h4>
-	<h1>Apartamenty na wynajem w Centrum Gdańska</h1>
+	<h1 id="textShadow">Apartamenty na wynajem w Centrum Gdańska</h1>
 </div>
 
 
@@ -114,11 +114,11 @@
 		
 		<div class = "sTText">
 			<h6>POZNAJMY SIĘ</h6>
-			<h2>Komfortowe apartamenty stworzone z myślą o Tobie!</h2>
+			<h2 id="textShadow">Komfortowe apartamenty stworzone z myślą o Tobie!</h2>
 			<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
 		</div>
 		
-				<div class= "sTImage"> 
+		<div class= "sTImage"> 
 			<img src="files/img/photos/apartment-ceiling-chairs-1571460.png" alt="">
 		</div>
 
@@ -144,17 +144,37 @@
 				<li><h7>Ocena naszych <br>gości</h7></li>
 			</ul>	
 		</li> 
-		
+		<div class="sThreeImage">
 			<img src="files/img/photos/beach-casual-female-556960.png" alt="">
-			
+		</div>	
+	</div>
+	
+	<div id="grad1"></div>
+
+	<div class="sectionFour">
+		<div id="apartments">
+			<h6>APARTAMENTY W GDAŃSKU</h6>
+			<h2 id="textShadow">Sprawdź nasze apartamenty</h2>
 		</div>
-</div>
+		
+		<div class="slider">
+			<div class="slide" id="slide-1"> 
+				<img src="files/img/photos/apartment-ceiling-chairs-1571460.png" alt=""> 
+					<div class="slideText"><h3>Apartament Green</h3></div>
+			</div>		
+			<div class="slide" id="slide-2">Apartament Black</div>
+			<div class="slide" id="slide-3">Apartament Blue</div>
+			<div class="slide" id="slide-4">Apartament Green</div>
+			<div class="slide" id="slide-5">Apartament Red</div>
+			<div class="slide" id="slide-6">Apartament Cyan</div>
+			<div class="slide" id="slide-7">Apartament Magenta</div>
+			<div class="slide" id="slide-8">Apartament Yellow</div>
+		</div>
 
-<div id="apartments">
-	<h6>APARTAMENTY W GDAŃSKU</h6>
-	<h2>Komfortowe apartamenty stworzone z myślą o Tobie!</h2>
-</div>
-
+	</div>
+	
+	
+	
 <div id="localisation">
 
 </div>
@@ -167,6 +187,7 @@
 
 </div>
 
+</div>
 </div>
 
 <!--JavaScript and Jquery-->
