--- a/Index.html
+++ b/Index.html
@@ -161,14 +161,37 @@
 			<div class="slide" id="slide-1"> 
 				<img src="files/img/photos/apartment-ceiling-chairs-1571460.png" alt=""> 
 					<div class="slideText"><h3>Apartament Green</h3></div>
-			</div>		
-			<div class="slide" id="slide-2">Apartament Black</div>
-			<div class="slide" id="slide-3">Apartament Blue</div>
-			<div class="slide" id="slide-4">Apartament Green</div>
-			<div class="slide" id="slide-5">Apartament Red</div>
-			<div class="slide" id="slide-6">Apartament Cyan</div>
-			<div class="slide" id="slide-7">Apartament Magenta</div>
-			<div class="slide" id="slide-8">Apartament Yellow</div>
+			</div>	
+			
+			<div class="slide" id="slide-2">
+				<img src="files/img/photos/apartment-clean-condominium-279719.png" alt="">
+					<div class="slideText"><h3>Apartament Black</h3></div>
+			</div>	
+			<div class="slide" id="slide-3">
+				<img src="files/img/photos/apartment-bedroom-ceiling-1082355.png" alt="">
+					<div class="slideText"><h3>Apartament Blue</h3></div>
+			</div>	
+			<div class="slide" id="slide-4">
+				<img src="files/img/photos/apartment-architecture-clean-1454805.png" alt="">
+					<div class="slideText"><h3>Apartament Green</h3></div>
+			</div>	
+			<div class="slide" id="slide-5">
+				<img src="files/img/photos/apartment-clean-condominium-279719.png" alt="">
+					<div class="slideText"><h3>Apartament Red</h3></div>
+			</div>	
+			<div class="slide" id="slide-6">
+				<img src="files/img/photos/apartment-ceiling-chairs-1571460.png" alt="">
+					<div class="slideText"><h3>Apartament Cyan</h3></div>
+			</div>	
+			<div class="slide" id="slide-7">
+				<img src="files/img/photos/apartment-bedroom-ceiling-1082355.png" alt="">
+					<div class="slideText"><h3>Apartament Magenta</h3></div>
+			</div>	
+			<div class="slide" id="slide-8">
+				<img src="files/img/photos/apartment-architecture-clean-1454805.png" alt="">
+					<div class="slideText"><h3>Apartament Yellow</h3></div>
+			</div>	
+			
 		</div>
 
 	</div>
